--- a/index.html
+++ b/index.html
@@ -2,22 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: #663399;
-}
-
-.flex-container > div {
-  background-color: #f1f1f1;
-  width: 100px;
-  margin: 10px;
-  text-align: center;
-  line-height: 75px;
-  font-size: 30px;
-}
-</style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="main.css">
 </head>
 <body>
 <h1>Home Page</h1>
