--- a/index.html
+++ b/index.html
@@ -6,22 +6,29 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<h1>Home Page</h1>
-
-<div class="flex-container">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-  <div>4</div>
-  <div>5</div>
-  <div>6</div>  
-  <div>7</div>
-  <div>8</div>
-  <div>9</div>  
-  <div>10</div>
-  <div>11</div>
-  <div>12</div>  
-</div>
-
+  <header>
+    <h1>Home Page</h1>
+  </header>
+  <nav></nav>
+  <main>
+    <article>
+      <div class="flex-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>  
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>  
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>  
+        <div>10</div>
+        <div>11</div>
+        <div>12</div>  
+      </div>
+    </article>
+  </main>
+  <aside></aside>
+  <footer></footer>
 </body>
 </html>
