--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <header>
-    <h1>Home Page</h1>
+    <h1>Home Page Header</h1>
   </header>
-  <nav></nav>
+  <nav>Navigation</nav>
   <main>
     <article>
       <div class="flex-container">
@@ -28,7 +28,7 @@
       </div>
     </article>
   </main>
-  <aside></aside>
-  <footer></footer>
+  <aside>Aside</aside>
+  <footer>Footer</footer>
 </body>
 </html>
