--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     </article>
   </main>
   <aside>Aside</aside>
-  <footer>Footer</footer>
+  <footer><a href="https://en.wikipedia.org/wiki/Spatial_navigation">Spatial Navigation</a></footer>
 </body>
 </html>
