--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <header>
-    <h1>Home Page Header</h1>
-  </header>
-  <nav>Navigation</nav>
-  <main>
-    <article>
-      <div class="flex-container">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>  
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>  
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>  
-        <div>10</div>
-        <div>11</div>
-        <div>12</div>  
-      </div>
-    </article>
-  </main>
-  <aside>Aside</aside>
-  <footer><a href="https://en.wikipedia.org/wiki/Spatial_navigation">Spatial Navigation</a></footer>
-</body>
+  <div class="flex-container">
+    <header>
+      <h1>Home Page Header</h1>
+    </header>
+    <nav>Navigation</nav>
+    <main>
+      <article>
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>  
+          <div>4</div>
+          <div>5</div>
+          <div>6</div>  
+          <div>7</div>
+          <div>8</div>
+          <div>9</div>  
+          <div>10</div>
+          <div>11</div>
+          <div>12</div>  
+        </article>
+        </main>
+        <aside>Aside</aside>
+        <footer><a href="https://en.wikipedia.org/wiki/Spatial_navigation">Spatial Navigation</a></footer>
+    </div><!-- closes flex container -->
+  </body>
 </html>
