--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!-- <link rel="stylesheet" href="main.css"> -->
 </head>
   <body>
+    <style>
 @media (orientation: portrait) {
   #grid {
     display: grid;
@@ -50,6 +51,8 @@
     #stats    { grid-area: stats }
     #board    { grid-area: board }
     #controls { grid-area: ctrls }
+    </style>
+      
     <div id="grid">
       <div id="title">Game Title</div>
       <div id="score">Score</div>
