--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 <link rel="stylesheet" href="main.css">
 </head>
   <body>
-    
-    <div id="grid">
-      <div id="title">Game Title</div>
-      <div id="score">Score</div>
-      <div id="stats">Stats</div>
-      <div id="board">Board</div>
-      <div id="controls">Controls</div>
-</div>
+    <div class="wrapper">
+      <div>One</div>
+      <div>Two</div>
+      <div>Three</div>
+      <div>Four</div>
+      <div>Five</div>
+    </div>
   </body>
 </html>
  
