--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 </head>
   <body>
     <div class="wrapper">
+      <div>
+          <canvas id="canvas" width="600" height="600" style="border:solid black 1px;">
+            Your browser does not support canvas element.
+          </canvas>
+    <br>
+        <button onclick="startup()">Initialize</button>
+    <br>
+        Log: <pre id="log" style="border: 1px solid #ccc;"></pre>
+      </div><!-- first div -->
+      <div>Two</div>
+      <div>Three</div>
+      <div>Four</div>
+      <div>Five</div>
+    </div>
+      <div class="wrapper">
       <div>One</div>
       <div>Two</div>
       <div>Three</div>
