--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
           <canvas id="canvas" width="600" height="600" style="border:solid black 1px;">
             Your browser does not support canvas element.
           </canvas>
-    <br>
+        <br>
         <button onclick="startup()">Initialize</button>
-    <br>
+        <br>
         Log: <pre id="log" style="border: 1px solid #ccc;"></pre>
-      </div><!-- first div -->
-      <div>Two</div>
-      <div>Three</div>
-      <div>Four</div>
-      <div>Five</div>
+      </div><!-- div dedicated to canvas -->
     </div>
       <div class="wrapper">
       <div>One</div>
