--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="wrapper">
       <div>
-          <canvas id="canvas" width="600" height="600" style="border:solid black 1px;">
+          <canvas id="canvas" width="600" height="600" style="margin: 0px auto;border:solid black 1px;">
             Your browser does not support canvas element.
           </canvas>
         <br>
