--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
   <body>
       <div>
-          <canvas id="canvas" width="600" height="600" style="margin: 0px auto;border:solid black 1px;">
+          <canvas id="canvas" width="600" height="600" style="display: block;margin: 0px auto;border:solid black 1px;">
             Your browser does not support canvas element.
           </canvas>
         <br>
