--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Your browser does not support canvas element.
           </canvas>
         <br>
-        <button onclick="startup()">Initialize</button>
+        <button style="display: block;margin: 0px auto;border:solid black 3px;" onclick="startup()">Initialize</button>
         <br>
         Log: <pre id="log" style="border: 1px solid #ccc;"></pre>
       </div><!-- div dedicated to canvas -->
