--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <br>
         <button style="display: block;margin: 0px auto;border:solid black 3px;" onclick="startup()">Initialize</button>
         <br>
-        Log: <pre id="log" style="border: 1px solid #ccc;"></pre>
+        Log: <pre id="log" style="display: block;margin: 0px auto;border: 1px solid #ccc;"></pre>
       </div><!-- div dedicated to canvas -->
       <div class="wrapper">
       <div>One</div>
