--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
       <div class="wrapper">
       <div>One</div>
-        <div><a href="/wireframes/index.html">Wireframes</a></div>
+        <div><a href="wireframes/index.html">Wireframes</a></div>
       <div>Three</div>
       <div>Four</div>
       <div>Five</div>
