--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -3,16 +3,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Project 2018 | Wireframes<title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../main.css">
 </head>
   <body>
       <div class="wrapper">
       <div>One</div>
-      <div>Two</div>
+      <div>Wireframes</div>
       <div>Three</div>
       <div>Four</div>
       <div>Five</div>
+    </div>
+    <div class="wrapper">
+      <header><h2>Wireframes</h2></header>
     </div>
   </body>
 </html>
