--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -17,6 +17,7 @@
     </div>
     <div class="wrapper">
       <header><h2>Wireframes</h2></header>
+      <h3>Content for wireframes</h3>
     </div>
   </body>
 </html>
