--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Project 2018 | Wireframes<title>
+  <title>Project 2018 | Wireframes</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="./main.css">
