--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -14,8 +14,10 @@
       <div>Five</div>
     </div>
     <div class="wrapper">
+      <div>
       <header><h2>Wireframes</h2></header>
       <h3>Content for wireframes</h3>
-    </div>
+      </div>
+    </div><!-- closes wrapper -->
   </body>
 </html>
