--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -14,7 +14,7 @@
       <div>Five</div>
     </div>
     <div class="wrapper">
-      <div>
+      <div style="backbround-color:red;>
       <header><h2>Wireframes</h2></header>
       <h3>Content for wireframes</h3>
       </div>
