--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/main.css">
 </head>
-  
-  <body>
+    <body>
       <div class="wrapper">
       <div>One</div>
       <div>Wireframes</div>
@@ -19,6 +18,10 @@
       <header><h2>Wireframes</h2></header>
       <h3>Content for wireframes</h3>
       </div>
+      <div>Two</div>
+      <div>Three</div>
+      <div>Four</div>
+      <div>Five</div>
     </div><!-- closes wrapper -->
   </body>
 </html>
