--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -7,7 +7,7 @@
   </head>
     <body>
       <div class="wrapper">
-      <div>One</div>
+        <div><a href="/index.html">Home</a></div>
       <div>Wireframes</div>
       <div>Three</div>
       <div>Four</div>
