--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -8,20 +8,17 @@
     <body>
       <div class="wrapper">
         <div><a href="/index.html">Home</a></div>
-      <div>Wireframes</div>
-      <div>Three</div>
-      <div>Four</div>
-      <div>Five</div>
-    </div>
-    <div class="wrapper">
-      <div style="backbround-color:red;>
-      <header><h2>Wireframes</h2></header>
-      <h3>Content for wireframes</h3>
+        <div>Wireframes</div>
+        <div>Three</div>
+        <div>Four</div>
+        <div>Five</div>
       </div>
-      <div>Two</div>
-      <div>Three</div>
-      <div>Four</div>
-      <div>Five</div>
-    </div><!-- closes wrapper -->
+      <div class="wrapper">
+        <div><a href="/index.html">Home</a></div>
+        <div>Wireframes</div>
+        <div>Three</div>
+        <div>Four</div>
+        <div>Five</div>
+      </div>
   </body>
 </html>
