--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -15,11 +15,9 @@
       </div>
       
       <div class="wrapper">
-        <div><a href="/index.html">Home</a></div>
-        <div>Wireframes</div>
-        <div>Three</div>
-        <div>Four</div>
-        <div>Five</div>
+        <div>Test One</div>
+        <div>Test Two</div>
+        <div>Test Three</div>
       </div>
   </body>
 </html>
