--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -7,17 +7,17 @@
   </head>
     <body>
       <div class="wrapper">
-        <div><a href="/index.html">Home</a></div>
-        <div>Wireframes</div>
-        <div>Three</div>
-        <div>Four</div>
-        <div>Five</div>
+        <div class="box1"><a href="/index.html">Home</a></div>
+        <div class="box2">Wireframes</div>
+        <div class="box3">Three</div>
+        <div class="box4">Four</div>
+        <div class="box5">Five</div>
       </div>
       
       <div class="wrapper">
-        <div>Test One</div>
-        <div>Test Two</div>
-        <div>Test Three</div>
+        <div class="box1">Test One</div>
+        <div class="box2">Test Two</div>
+        <div class="box3">Test Three</div>
       </div>
   </body>
 </html>
