--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
   <body>
       <div class="wrapper">
-      <div>One</div>
+      <div style="background-color:red;">One</div>
       <div><a href="wireframes/index.html">Wireframes</a></div>
       <div>Three</div>
       <div>Four</div>
