--- a/stories/index.html
+++ b/stories/index.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Project 2018 | Stories</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/main.css">
+  </head>
+    <body>
+      <div class="wrapper">
+        <div class="box1">UI/div>
+        <div class="box2">Server</div>
+        <div class="box3">DB</div>
+      </div>
+      <div class="wrapper">
+        <div class="box1">UI/div>
+        <div class="box2">Server</div>
+        <div class="box3">DB</div>
+      </div>
+  </body>
+</html>
