--- a/stories/index.html
+++ b/stories/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/main.css">
   </head>
     <body>
+      <header>Lecture Notes:How to make a story</header>
+      <h3>Createa vertical units for  each of the stories, slicing through each of the components</h3>
       <div class="wrapper">
         <div class="box1">UI/div>
         <div class="box2">Server</div>
