--- a/stories/index.html
+++ b/stories/index.html
@@ -8,13 +8,16 @@
   </head>
     <body>
       <header>Lecture Notes:How to make a story</header>
+      <h2>Agile Development/h2>
       <h3>Createa vertical units for  each of the stories, slicing through each of the components</h3>
       <div class="wrapper">
+        <h3>Story One</h3>
         <div class="box1">UI/div>
         <div class="box2">Server</div>
         <div class="box3">DB</div>
       </div>
       <div class="wrapper">
+        <h3>Story Two</h3>
         <div class="box1">UI/div>
         <div class="box2">Server</div>
         <div class="box3">DB</div>
