--- a/stories/index.html
+++ b/stories/index.html
@@ -10,6 +10,7 @@
       <header>Lecture Notes:How to make a story</header>
       <h2>Agile Development/h2>
       <h3>Createa vertical units for  each of the stories, slicing through each of the components</h3>
+        <p>Take features and make them stories.  E.G. Bob the builder wants to log in.  You need a UI button to log in, interact with servers, and adjust the database. </p>
       <div class="wrapper">
         <h3>Story One</h3>
         <div class="box1">UI/div>
