--- a/stories/index.html
+++ b/stories/index.html
@@ -13,7 +13,7 @@
         <p>Take features and make them stories.  E.G. Bob the builder wants to log in.  You need a UI button to log in, interact with servers, and adjust the database. </p>
       <div class="wrapper">
         <h3>Story One</h3>
-        <div class="box1">UI/div>
+        <div class="box1">UI</div>
         <div class="box2">Server</div>
         <div class="box3">DB</div>
       </div>
