--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 </head>
   <body>
       <div class="wrapper">
-      <div style="background-color:red;">One</div>
-      <div><a href="wireframes/index.html">Wireframes</a></div>
-      <div>Three</div>
-      <div>Four</div>
-      <div>Five</div>
-    </div>
+           <div>One</div>
+           <div><a href="wireframes/index.html">Wireframes</a></div>
+           <div>Three</div>
+           <div>Four</div>
+           <div>Five</div>
+     </div>
   </body>
 </html>
  
