--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/main.css">
   </head>
     <body>
-      <div class="wrapper">
+      <div class="flexwrapper">
         <div class="box1"><a href="/index.html">Home</a></div>
         <div class="box2">Wireframes</div>
         <div class="box3">Three</div>
@@ -14,9 +14,9 @@
         <div class="box5">Five</div>
       </div>
       <div class="wrapper">
-        <div class="box1">Test One</div>
-        <div class="box2">Test Two</div>
-        <div class="box3">Test Three</div>
+        <div class="gc1gr3">Test One</div>
+        <div class="gc2gr3">Test Two</div>
+        <div class="gc3gr3">Test Three</div>
       </div>
   </body>
 </html>
