--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -13,6 +13,7 @@
         <div class="box4">Four</div>
         <div class="box5">Five</div>
       </div>
+      <div>&nbsp;</div><br />
       <div class="wrapper">
         <div class="gc1gr3">Test One</div>
         <div class="gc2gr3">Test Two</div>
