--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -13,7 +13,14 @@
         <div class="box4">Four</div>
         <div class="box5">Five</div>
       </div>
-      <div>&nbsp;</div><br />
+      <div class="wrapper">
+        <div class="one">One</div>
+        <div class="two">Two</div>
+        <div class="three">Three</div>
+        <div class="four">Four</div>
+        <div class="five">Five</div>
+        <div class="six">Six</div>
+      </div>
       <div class="wrapper">
         <div class="gc1gr3">Test One</div>
         <div class="gc2gr3">Test Two</div>
