--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -6,13 +6,16 @@
     <link rel="stylesheet" href="/main.css">
   </head>
     <body>
-      <div class="flexwrapper">
-        <div class="box1"><a href="/index.html">Home</a></div>
-        <div class="box2">Wireframes</div>
-        <div class="box3">Three</div>
-        <div class="box4">Four</div>
-        <div class="box5">Five</div>
-      </div>
+      <nav>
+        <div class="flexwrapper">
+          <div class="box1"><a href="/index.html">Home</a></div>
+          <div class="box2">Wireframes</div>
+          <div class="box3">Three</div>
+          <div class="box4">Four</div>
+          <div class="box5">Five</div>
+        </div>
+      </nav>
+      <main>
       <div class="wrapper">
         <div class="one">One</div>
         <div class="two">Two</div>
@@ -26,5 +29,6 @@
         <div class="gc2gr3">Test Two</div>
         <div class="gc3gr3">Test Three</div>
       </div>
+      </main>    
   </body>
 </html>
