--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -16,19 +16,24 @@
         </div>
       </nav>
       <main>
-        <div class="wrapper">
-          <div class="one">One</div>
-          <div class="two">Two</div>
-          <div class="three">Three</div>
-          <div class="four">Four</div>
-          <div class="five">Five</div>
-          <div class="six">Six</div>
-        </div>
-        <div class="wrapper">
-          <div class="gc1gr3">Test One</div>
-          <div class="gc2gr3">Test Two</div>
-          <div class="gc3gr3">Test Three</div>
-        </div>
+        <article>
+        <h1>Test Page for Grids </h1>
+          <h2>Derivative Example</h2>
+          <div class="wrapper">
+            <div class="gc1gr3">Test One</div>
+            <div class="gc2gr3">Test Two</div>
+            <div class="gc3gr3">Test Three</div>
+          </div>
+          <div class="wrapper">
+            <h2>MDN Example</h2>
+            <div class="one">One</div>
+            <div class="two">Two</div>
+            <div class="three">Three</div>
+            <div class="four">Four</div>
+            <div class="five">Five</div>
+            <div class="six">Six</div>
+          </div>
+        </article>
       </main>    
   </body>
 </html>
