--- a/stories/index.html
+++ b/stories/index.html
@@ -7,21 +7,14 @@
     <link rel="stylesheet" href="/main.css">
   </head>
     <body>
-      <header>Lecture Notes:How to make a story</header>
+      <header>Class One Notes:How to make a story</header>
       <h2>Agile Development</h2>
       <h3>Createa vertical units for  each of the stories, slicing through each of the components</h3>
-        <p>Take features and make them stories.  E.G. Bob the builder wants to log in.  You need a UI button to log in, interact with servers, and adjust the database. </p>
+        <p>Take features and make them stories.  E.G. Bob the builder wants to log in.  You need a UI button to log in, interact with servers, and adjust the database.</p>
       <div class="wrapper">
-        <h3>Story One</h3>
-        <div class="box1">UI</div>
-        <div class="box2">Server</div>
-        <div class="box3">DB</div>
-      </div>
-      <div class="wrapper">
-        <h3>Story Two</h3>
-        <div class="box1">UI/div>
-        <div class="box2">Server</div>
-        <div class="box3">DB</div>
+        <div class="one">UI</div>
+        <div class="two">Server</div>
+        <div class="three">DB</div>
       </div>
   </body>
 </html>
