--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -37,9 +37,15 @@
         <article>
         <h1>Test Page for Grids </h1>
           <div class="wrapper">
-            <div class="gc1gr1">Test One</div>
-            <div class="gc2gr3">Test Two</div>
-            <div class="gc3gr3">Test Three</div>
+            <div class="gc1gr1">Test One Block One</div>
+            <div class="gc2gr3">Test One Block Two</div>
+            <div class="gc3gr3">Test One Block Three</div>
+          </div>
+               
+          <div class="wrapper">
+            <div class="gc1gr1">Test Two Block One<</div>
+            <div class="gc2gr3" style="background-image:(backdrop911scene.png);">Test Two Block Two</div>
+            <div class="gc3gr3">Test Two Block Three</div>
           </div>
           <div class="wrapper">
             <div class="one">One</div>
