--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -44,7 +44,7 @@
                
           <div class="wrapper">
             <div class="gc1gr1">Test Two Block One<</div>
-            <div class="gc2gr3" style="background-image:(backdrop911scene.png);">Test Two Block Two</div>
+            <div class="gc2gr3" style="background-image:url('backdrop911scene.png');">Test Two Block Two</div>
             <div class="gc3gr3">Test Two Block Three</div>
           </div>
           <div class="wrapper">
