--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -48,6 +48,9 @@
             <div class="gc3gr3">Test Two Block Three</div>
           </div>
           <div class="wrapper">
+            <div class="screen911wide">Test Three Block One</div>
+          </div>
+          <div class="wrapper">
             <div class="one">One</div>
             <div class="two">Two</div>
             <div class="three">Three</div>
