--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -35,15 +35,9 @@
       </nav>
       <main>
         <article>
-        <h1>Test Page for Grids </h1>
+        <h1>Test Page for Grids </h1>              
           <div class="wrapper">
-            <div class="gc1gr1">Test One Block One</div>
-            <div class="gc2gr3">Test One Block Two</div>
-            <div class="gc3gr3">Test One Block Three</div>
-          </div>
-               
-          <div class="wrapper">
-            <div class="gc1gr1">Test Two Block One<</div>
+            <div class="gc1gr1">Test Two Block One</div>
             <div class="screen911">Test Two Block Two</div>
             <div class="gc3gr3">Test Two Block Three</div>
           </div>
