--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -35,7 +35,7 @@
       </nav>
       <main>
         <article>
-        <h1>Test Page for Grids </h1>              
+        <h1 style="text-align:center">Current Test Page for Grids </h1>              
           <div class="wrapper">
             <div class="gc1gr1">Test Two Block One</div>
             <div class="screen911">Test Two Block Two</div>
