--- a/wireframes/wireframe3.html
+++ b/wireframes/wireframe3.html
@@ -28,11 +28,11 @@
         <article>
         <h1 style="text-align:center">Wireframe Three</h1>
          <div class="wrapper">
-            <div class="wireframe3">One</div>
-            <div class="wireframe3">Two</div>
-            <div class="wireframe3">Three</div>
-            <div class="wireframe3">Four</div>
-            <div class="wireframe3">Five</div>
+            <div class="wireframe3a">One</div>
+            <div class="wireframe3b">Two</div>
+            <div class="wireframe3c">Three</div>
+            <div class="wireframe3d">Four</div>
+            <div class="wireframe3e">Five</div>
           </div>
         </article>
       </main>    
