--- a/wireframes/wireframe3.html
+++ b/wireframes/wireframe3.html
@@ -27,7 +27,7 @@
       <main>
         <article>
         <h1 style="text-align:center">Wireframe Three</h1>
-         <div class="wrapper">
+         <div class="wrapper-phone">
             <div class="wireframe3a">One</div>
             <div class="wireframe3b">Two</div>
             <div class="wireframe3c">Three</div>
