--- a/wireframes/wireframe3.html
+++ b/wireframes/wireframe3.html
@@ -28,11 +28,11 @@
         <article>
         <h1 style="text-align:center">Wireframe Three</h1>
          <div class="wrapper-phone">
-            <div class="wireframe3a">One</div>
-            <div class="wireframe3b">Two</div>
-            <div class="wireframe3c">Three</div>
-            <div class="wireframe3d">Four</div>
-            <div class="wireframe3e">Five</div>
+            <div class="wireframe3a">Alert Message</div>
+            <div class="wireframe3b">Some Message</div>
+            <div class="wireframe3c">Some Message</div>
+            <div class="wireframe3d">Some Message</div>
+            <div class="wireframe3e">Some Message</div>
           </div>
         </article>
       </main>    
