--- a/wireframes/wireframe3.html
+++ b/wireframes/wireframe3.html
@@ -27,6 +27,7 @@
       <main>
         <article>
         <h1 style="text-align:center">Wireframe Three</h1>
+        <h2 style="text-align:center">SMS Alert Received on Mobile Phone</h2>
          <div class="wrapper-phone">
             <div class="wireframe3a">Alert Message</div>
             <div class="wireframe3b">Some Message</div>
