--- a/wireframes/wireframe3.html
+++ b/wireframes/wireframe3.html
@@ -29,7 +29,7 @@
         <h1 style="text-align:center">Wireframe Three</h1>
         <h2 style="text-align:center">SMS Alert Received on Mobile Phone</h2>
          <div class="wrapper-phone">
-            <div class="wireframe3a">Alert Message</div>
+            <div class="wireframe3a">Alert Message: Dangerous Temperatures Reached. [This message was sent by the temperature monitor at 00:00:0000 EST]</div>
             <div class="wireframe3b">Some Message</div>
             <div class="wireframe3c">Some Message</div>
             <div class="wireframe3d">Some Message</div>
