--- a/wireframes/wireframe1.html
+++ b/wireframes/wireframe1.html
@@ -27,9 +27,9 @@
       <main>
         <article>
         <h1 style="text-align:center">Wireframe One</h1>
+        <hp style="text-align:center">Computer Screen With Web Page</p>
          <div class="wrapper">
-            <div class="wireframe1">One</div>
-            <div class="wireframe2">Two</div>
+            <div class="wireframe1">Computer Screen</div>
           </div>
         </article>
       </main>    
