--- a/wireframes/wireframe1.html
+++ b/wireframes/wireframe1.html
@@ -27,7 +27,7 @@
       <main>
         <article>
         <h1 style="text-align:center">Wireframe One</h1>
-        <hp style="text-align:center">Computer Screen With Web Page</p>
+        <p style="text-align:center">Computer Screen With Web Page</p>
          <div class="wrapper">
             <div class="wireframe1">Computer Screen</div>
           </div>
