--- a/wireframes/wireframe2.html
+++ b/wireframes/wireframe2.html
@@ -27,9 +27,10 @@
       <main>
         <article>
         <h1 style="text-align:center">Wireframe Two</h1>
+        <p style="text-align:center">Computer Screen With Web Notification</p>
          <div class="wrapper">
             <div class="wireframe1">One</div>
-            <div class="wireframe2">Two</div>
+            <div class="wireframe2">Alert! Dangerous Temperatures Reached. [This message was sent by the temperature monitor at 00:00:0000 EST]</div>
           </div>
         </article>
       </main>    
