--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -35,15 +35,7 @@
       </nav>
       <main>
         <article>
-        <h1 style="text-align:center">Current Test Page for Grids </h1>              
-          <div class="wrapper">
-            <div class="gc1gr1">Test Two Block One</div>
-            <div class="screen911">Test Two Block Two</div>
-            <div class="gc3gr3">Test Two Block Three</div>
-          </div>
-          <div class="wrapper">
-            <div class="screen911wide">Test Three Block One</div>
-          </div>
+        <h1 style="text-align:center">Test Pages for Grids </h1>              
           <div class="wrapper">
             <div class="one">One</div>
             <div class="two">Two</div>
