--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
            <div>One</div>
            <div><a href="wireframes/index.html">Wireframes</a></div>
            <div>Three</div>
-           <div>Four</div>
-           <div>Five</div>
+     </div>
+     <div class="wrapper">
+           <div>One</div>
+           <div><a href="wireframes/index.html">Wireframes</a></div>
+           <div>Three</div>
      </div>
   </body>
 </html>
