--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </head>
   <body>
       <div class="wrapper">
-           <div>One</div>
-           <div><a href="wireframes/index.html">Wireframes</a></div>
-           <div>Three</div>
+           <div><div><a href="images/"><img src="/images/Screenshot (1).png" style="height:200px;"/></a></div>/div>
+           <div><a href="images/"><img src="/images/Screenshot (1).png" style="height:200px;"/></a></div>
+           <div><div><a href="images/"><img src="/images/Screenshot (1).png" style="height:200px;"/></a></div></div>
      </div>
      <div class="wrapper">
            <div>One</div>
