--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 </head>
   <body>
       <div class="wrapper">
-           <div><div><a href="images/"><img src="/images/Screenshot (1).png" style="height:200px;"/></a></div>/div>
-           <div><a href="images/"><img src="/images/Screenshot (1).png" style="height:210px;"/></a></div>
-           <div><div><a href="images/"><img src="/images/Screenshot (1).png" style="height:200px;"/></a></div></div>
-     </div>
-     <div class="wrapper">
-           <div>One</div>
-           <div><a href="wireframes/index.html">Wireframes</a></div>
-           <div>Three</div>
-     </div>
+           <div><div><a href="images/Screenshot (1).png"><img src="/images/Screenshot (1).png" style="height:200px;"/></a></div>
+           <div><a href="images/Screenshot (2).png"><img src="/images/Screenshot (2).png" style="height:200px;"/></a></div>
+           <div><a href="images/Screenshot (3).png"><img src="/images/Screenshot (3).png" style="height:200px;"/></a></div>
+     </div><!-- close wrapper -->
+      <div class="wrapper">
+           <div><div><a href="images/Screenshot (1).png"><img src="/images/Screenshot (1).png" style="height:200px;"/></a></div>
+           <div><a href="images/Screenshot (2).png"><img src="/images/Screenshot (2).png" style="height:200px;"/></a></div>
+           <div><a href="images/Screenshot (3).png"><img src="/images/Screenshot (3).png" style="height:200px;"/></a></div>
+     </div><!-- close wrapper -->
   </body>
 </html>
  
