--- a/index.html
+++ b/index.html
@@ -26,16 +26,10 @@
      
 </head>
   <body>
-      <div class="wrapper">
-           <div><div><a href="images/Screenshot (1).png"><img src="/images/Screenshot (1).png" style="height:200px;"/></a></div>
-           <div><a href="images/Screenshot (2).png"><img src="/images/Screenshot (2).png" style="height:200px;"/></a></div>
-           <div><a href="images/Screenshot (3).png"><img src="/images/Screenshot (3).png" style="height:200px;"/></a></div>
-     </div><!-- close wrapper -->
-      <div class="wrapper">
-           <div><div><a href="images/Screenshot (4).png"><img src="/images/Screenshot (4).png" style="height:200px;"/></a></div>
-           <div><a href="images/Screenshot (5).png"><img src="/images/Screenshot (5).png" style="height:200px;"/></a></div>
-           <div><a href="images/Screenshot (6).png"><img src="/images/Screenshot (6).png" style="height:200px;"/></a></div>
-     </div><!-- close wrapper -->
+
+           <div class="wrapper"><a href="images/Screenshot (1).png"><img src="/images/Screenshot (1).png" style="height:200px;"/></a></div>
+           <div class="wrapper"><a href="images/Screenshot (2).png"><img src="/images/Screenshot (2).png" style="height:200px;"/></a></div>
+
   </body>
 </html>
  
