--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            <div class="wrapper"><a href="images/Screenshot (10).png"><img src="/images/Screenshot (10).png" style="height:200px;"/></a></div>
            <div class="wrapper"><a href="images/Screenshot (11).png"><img src="/images/Screenshot (11).png" style="height:200px;"/></a></div>
            <div class="wrapper"><a href="images/Screenshot (12).png"><img src="/images/Screenshot (12).png" style="height:200px;"/></a></div>
-           <div class="wrapper"><a href="images/Screenshot (13).png"><img src="/images/Screenshot (13).png" style="height:200px;"/></a></div>
+           <div class="wrapper"><a href="images/Screenshot (13).png"><img src="/images/Screenshot (13).png" style="height:200px;"/></a><p>Following steps outlined on this page: <a href="https://github.com/Microsoft/Windows-iotcore-samples/tree/develop/Samples/HelloWorld/CS">Hello World</a></p><p><blockquote>Since the IoT extension SDK is not added to projects by default, we'll need to add a reference so that namespaces like Windows.Devices.Gpio will be available in the project. To do so, just right-click on the References entry under the project, Select "Add Reference" then navigate the resulting dialog to Universal Windows->Extensions->Windows IoT Extensions for the UWP, check the box, and click OK.</blockquote></p></div>
            <div class="wrapper"><a href="images/Screenshot (14).png"><img src="/images/Screenshot (14).png" style="height:200px;"/></a></div>
            <div class="wrapper"><a href="images/Screenshot (15).png"><img src="/images/Screenshot (15).png" style="height:200px;"/></a></div>
                   <div class="wrapper"><a href="images/Screenshot (16).png"><img src="/images/Screenshot (16).png" style="height:200px;"/></a></div>
