--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
            <div class="wrapper"><a href="images/Screenshot (10).png"><img src="/images/Screenshot (10).png" style="height:200px;"/></a></div>
            <div class="wrapper"><a href="images/Screenshot (11).png"><img src="/images/Screenshot (11).png" style="height:200px;"/></a></div>
            <div class="wrapper"><a href="images/Screenshot (12).png"><img src="/images/Screenshot (12).png" style="height:200px;"/></a></div>
-       <div class="img13"><div class="wrapper"><a href="images/Screenshot (13).png"><img src="/images/Screenshot (13).png" style="height:200px;"/></a></div><!-- closes wrapper -->
-                <h4>Following steps outlined on this page: <a href="https://github.com/Microsoft/Windows-iotcore-samples/tree/develop/Samples/HelloWorld/CS">Hello World : Add a reference to the Windows IoT extension SDK</a></h4>
-                <h5>Since the IoT extension SDK is not added to projects by default, we'll need to add a reference so that namespaces like Windows.Devices.Gpio will be available in the project. To do so, just right-click on the References entry under the project, Select "Add Reference" then navigate the resulting dialog to Universal Windows->Extensions->Windows IoT Extensions for the UWP, check the box, and click OK.</h5>
-       </div><!-- end class img13 -->
+       <div class="wrapper"><div><a href="images/Screenshot (13).png"><img src="/images/Screenshot (13).png" style="height:200px;"/></a></div><!-- closes first div in wrapper -->
+                <div><h4>Following steps outlined on this page: <a href="https://github.com/Microsoft/Windows-iotcore-samples/tree/develop/Samples/HelloWorld/CS">Hello World : Add a reference to the Windows IoT extension SDK</a></h4>
+                <h5>Since the IoT extension SDK is not added to projects by default, we'll need to add a reference so that namespaces like Windows.Devices.Gpio will be available in the project. To do so, just right-click on the References entry under the project, Select "Add Reference" then navigate the resulting dialog to Universal Windows->Extensions->Windows IoT Extensions for the UWP, check the box, and click OK.</h5></div><!-- closes second div in wrapper -->
+       </div><!-- end class wrapper -->
            <div class="wrapper"><a href="images/Screenshot (14).png"><img src="/images/Screenshot (14).png" style="height:200px;"/></a></div>
            <div class="wrapper"><a href="images/Screenshot (15).png"><img src="/images/Screenshot (15).png" style="height:200px;"/></a></div>
                   <div class="wrapper"><a href="images/Screenshot (16).png"><img src="/images/Screenshot (16).png" style="height:200px;"/></a></div>
