--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="wrapper"><a href="images/Screenshot (17).png"><img src="/images/Screenshot (17).png" style="height:200px;"/></a></div>
       <div class="wrapper"><a href="images/Screenshot (18).png"><img src="/images/Screenshot (18).png" style="height:200px;"/></a></div>
       <div class="wrapper"><a href="images/Screenshot (19).png"><img src="/images/Screenshot (19).png" style="height:200px;"/></a></div>
-             <div class="wrapper"><a href="images/Screenshot (20).png"><img src="/images/Screenshot (20).png" style="height:200px;"/></a></div>
+             <div class="wrapper"><div><a href="images/Screenshot (20).png"><img src="/images/Screenshot (20).png" style="height:200px;"/></a></div><div><h4>I learned several things:</h4><h5>That I was able to deploy an app two different ways.  I deployed the Hellow World app through the introductory interface.   I deployed the WalkThrough1 app through Visual Studio Community 2017.  Next, I learned that I was able to start and stop the apps through this interface.  It worked the same as pressing F5 on Visual Studio Community 2017.  I also learned that it was considered a foreground app.</h5></div></div><!-- closes wrapper -->
       <div class="wrapper"><a href="images/Screenshot (21).png"><img src="/images/Screenshot (21).png" style="height:200px;"/></a></div>
       <div class="wrapper"><a href="images/Screenshot (22).png"><img src="/images/Screenshot (22).png" style="height:200px;"/></a></div>
       <div class="wrapper"><a href="images/Screenshot (23).png"><img src="/images/Screenshot (23).png" style="height:200px;"/></a></div>
