--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="wrapper"><a href="images/Screenshot (4).png"><img src="/images/Screenshot (4).png" style="height:200px;"/></a></div>
       <div class="wrapper"><a href="images/Screenshot (5).png"><img src="/images/Screenshot (5).png" style="height:200px;"/></a></div>
       <div class="wrapper"><a href="images/Screenshot (6).png"><img src="/images/Screenshot (6).png" style="height:200px;"/></a></div>
-      <div class="wrapper"><a href="images/Screenshot (7).png"><img src="/images/Screenshot (7).png" style="height:200px;"/></a></div>
+      <div class="wrapper"><div><a href="images/Screenshot (7).png"><img src="/images/Screenshot (7).png" style="height:200px;"/></a></div><div><h4>Shows Wireless and Wired Connections</h4><h5><a href="https://docs.microsoft.com/en-us/windows/iot-core/tutorials/quickstarter/devicesetup">Instructions for Wireless</a></h5><h5>Excerpt: "Find your unconfigured board from the list. Its name will begin with "AJ_"... (e.g. AJ_58EA6C68). If you don't see your board appear after a few minutes, try rebooting your board."</h5></div></div>
       <div class="wrapper"><a href="images/Screenshot (8).png"><img src="/images/Screenshot (8).png" style="height:200px;"/></a></div>
       <div class="wrapper"><a href="images/Screenshot (9).png"><img src="/images/Screenshot (9).png" style="height:200px;"/></a></div>
       <div class="wrapper"><a href="images/Screenshot (10).png"><img src="/images/Screenshot (10).png" style="height:200px;"/></a></div>
