--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div><a href="images/Screenshot (24).png"><img src="/images/Screenshot (24).png" style="height:200px;"/></a></div>
     </div><!-- wrapper --> 
      <div class="wrapper">
-      <div><a href="images/Screenshot (25).png"><img src="/images/Screenshot (25).png" style="height:200px;"/></a></div>
+      <div><a href="images/Screenshot (25).png"><img src="/images/Screenshot (25).png" style="height:200px;"/></a>Indicates the IoT Dashboard is installed, but not set up properly</div>
       <div><a href="images/Screenshot (26).png"><img src="/images/Screenshot (26).png" style="height:200px;"/></a></div>
       <div><a href="images/Screenshot (27).png"><img src="/images/Screenshot (27).png" style="height:200px;"/></a></div>
     </div><!-- wrapper --> 
