--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
 
     <div class="wrapper">
-           <div><a href="images/Screenshot (4).png"><img src="/images/Screenshot (4).png" style="height:200px;"/></a></div>
+           <div><a href="images/Screenshot (4).png"><img src="/images/Screenshot (4).png" style="height:200px;"/></a>Initial deployment of an app onto a remote machine.  Although I did not realize it at the time, running this sample actually deployed the app to the remote machine (the Raspberry Pi)</div>
            <div><a href="images/Screenshot (5).png"><img src="/images/Screenshot (5).png" style="height:200px;"/></a></div>
            <div><a href="images/Screenshot (6).png"><img src="/images/Screenshot (6).png" style="height:200px;"/></a></div>
     </div><!-- wrapper -->      
