--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          
     <div class="wrapper">
          <div><a href="images/Screenshot (7).png"><img src="/images/Screenshot (7).png" style="height:200px;"/></a>https://docs.microsoft.com/en-us/windows/iot-core/tutorials/quickstarter/devicesetup</div>
-          <div><a href="images/Screenshot (8).png"><img src="/images/Screenshot (8).png" style="height:200px;"/></a></div>
+          <div><a href="images/Screenshot (8).png"><img src="/images/Screenshot (8).png" style="height:200px;"/></a>As I attempted to login to my own Internet service, I was actually successful, but also kicked the rest of my devices offline.  I actually had to disconnect the device in order to get back online.</div>
           <div class="wrapper"><a href="images/Screenshot (9).png"><img src="/images/Screenshot (9).png" style="height:200px;"/></a></div>
     </div><!-- wrapper --> 
        
