--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
        
     <div class="wrapper">
       <div><a href="images/Screenshot (10).png"><img src="/images/Screenshot (10).png" style="height:200px;"/></a>This screen shows the screen showing that the device was being detected as before.  The recovery so far looks good, although I took several steps backward to get to this point.</div>
-      <div><a href="images/Screenshot (11).png"><img src="/images/Screenshot (11).png" style="height:200px;"/></a></div>
-      <div><a href="images/Screenshot (12).png"><img src="/images/Screenshot (12).png" style="height:200px;"/></a></div>
+      <div><a href="images/Screenshot (11).png"><img src="/images/Screenshot (11).png" style="height:200px;"/></a>Retracing the steps to ensure nothing was permanently broken.  I was still able to run an app on a remote machine, altough I could not see an output.</div>
+      <div><a href="images/Screenshot (12).png"><img src="/images/Screenshot (12).png" style="height:200px;"/></a>This is an alternate way to connect to the remote device, although at the time I did not understand that it was a second way to connect.  I was simply exploring at this point.</div>
     </div><!-- wrapper --> 
 
     <div class="wrapper">
