--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
   <body>
 
     <div class="wrapper">
-           <div><a href="images/Screenshot (4).png"><img src="/images/Screenshot (4).png" style="height:200px;"/></a>Initial deployment of an app onto a remote machine.  Although I did not realize it at the time, running this sample actually deployed the app to the remote machine (the Raspberry Pi)</div>
-           <div><a href="images/Screenshot (5).png"><img src="/images/Screenshot (5).png" style="height:200px;"/></a></div>
-           <div><a href="images/Screenshot (6).png"><img src="/images/Screenshot (6).png" style="height:200px;"/></a></div>
-    </div><!-- wrapper -->      
-         
+      <div><a href="images/Screenshot (4).png"><img src="/images/Screenshot (4).png" style="height:200px;"/></a>Initial deployment of an app onto a remote machine. Although I did not realize it at the time, running this sample actually deployed the app to the remote machine.</div>
+      <div><a href="images/Screenshot (5).png"><img src="/images/Screenshot (5).png" style="height:200px;"/></a></div>
+      <div><a href="images/Screenshot (6).png"><img src="/images/Screenshot (6).png" style="height:200px;"/></a></div>
+    </div><!-- wrapper -->            
     <div class="wrapper">
          <div><a href="images/Screenshot (7).png"><img src="/images/Screenshot (7).png" style="height:200px;"/></a>https://docs.microsoft.com/en-us/windows/iot-core/tutorials/quickstarter/devicesetup</div>
           <div><a href="images/Screenshot (8).png"><img src="/images/Screenshot (8).png" style="height:200px;"/></a>As I attempted to login to my own Internet service, I was actually successful, but also kicked the rest of my devices offline.  I actually had to disconnect the device in order to get back online.</div>
