--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </div><!-- wrapper -->            
     <div class="wrapper">
          <div><a href="images/Screenshot (7).png"><img src="/images/Screenshot (7).png" style="height:200px;"/></a>https://docs.microsoft.com/en-us/windows/iot-core/tutorials/quickstarter/devicesetup</div>
-          <div><a href="images/Screenshot (8).png"><img src="/images/Screenshot (8).png" style="height:200px;"/></a>As I attempted to login to my own Internet service, I was actually successful, but also kicked the rest of my devices offline.  I actually had to disconnect the device in order to get back online.</div>
-          <div class="wrapper"><a href="images/Screenshot (9).png"><img src="/images/Screenshot (9).png" style="height:200px;"/></a>This shows a return to status quo on the screen after removing the additional device, and restarting the connection services. What it doesn't show is the great amount of time it took to recover.</div>
+         <div><a href="images/Screenshot (8).png"><img src="/images/Screenshot (8).png" style="height:200px;"/></a>As I attempted to login to my own Internet service, I was actually successful, but also kicked the rest of my devices offline. </div>
+         <div><a href="images/Screenshot (9).png"><img src="/images/Screenshot (9).png" style="height:200px;"/></a>This shows a return to status quo on the screen after removing the additional device, and restarting the connection services. What it doesn't show is the great amount of time it took to recover.</div>
     </div><!-- wrapper --> 
        
     <div class="wrapper">
