--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="wrapper">
       <div><a href="images/Screenshot (4).png"><img src="/images/Screenshot (4).png" style="height:200px;"/></a>Initial deployment of an app onto a remote machine. Although I did not realize it at the time, running this sample actually deployed the app to the remote machine.</div>
-      <div><a href="images/Screenshot (5).png"><img src="/images/Screenshot (5).png" style="height:200px;"/></a>The screenshot matched the example found <a href="https://github.com/Microsoft/Windows-iotcore-samples/tree/develop/Samples/HelloWorld/CS">here</a></div>
+      <div><a href="images/HelloWorldAppLocal.png"><img src="/images/HelloWorldAppLocal.png" style="height:200px;"/></a>The screenshot matched the example found <a href="https://github.com/Microsoft/Windows-iotcore-samples/tree/develop/Samples/HelloWorld/CS">here</a></div>
       <div><a href="images/Screenshot (6).png"><img src="/images/Screenshot (6).png" style="height:200px;"/></a></div>
     </div><!-- wrapper --> 
        
