--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   <div class="wrapper">
                      <div><a href="images/Screenshot (58).png"><img src="/images/Screenshot (58).png" style="height:200px;"/></a></div>
                      <div><a href="images/Screenshot (59).png"><img src="/images/Screenshot (59).png" style="height:200px;"/></a></div>
-                     <div><a href="images/Screenshot (59).png"><img src="/images/Screenshot (59).png" style="height:200px;"/></a></div>
+                     <div><a href="images/LockScreenLogo.scale-200.png"><img src="/images/LockScreenLogo.scale-200.png" style="height:200px;"/></a></div>
                    </div><!-- wrapper -->
             
        </section>         
